--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -16,6 +16,7 @@
             <th>Date de publication</th>
             <th>Catégorie</th>
             <th>Auteur</th>
+            <th>Nb commentaires</th>
             <th width="250px"></th>
         </tr>
         {% for article in articles %}
@@ -25,6 +26,7 @@
                 <td>{{ article.publicationDate|date('d/m/Y H:i') }}</td>
                 <td>{{ article.category }}</td>
                 <td>{{ article.author }}</td>
+                <td>{{ article.comments.count }}</td>
                 <td>
                     <a href="{{ path('app_admin_article_edit', {id: article.id}) }}"
                        class="btn btn-primary">
