--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -2,4 +2,46 @@
 
 {% block body %}
     <h1>{{ article.title }}</h1>
+    <p>
+        Par {{ article.author }},
+        <em>{{ article.publicationDate|date('d/m/Y H:i') }}</em><br>
+        <strong>Dans {{ article.category }}</strong>
+    </p>
+    {% if article.image is not null %}
+        <div class="text-center">
+            <img src="{{ asset('images/' ~ article.image) }}">
+        </div>
+    {% endif %}
+    <p>{{ article.content|nl2br }}</p>
+
+    <h2>Commentaires</h2>
+    {% if app.user is null %}
+        <div class="alert alert-info">
+            Vous devez être connecté pour publier un commentaire.
+        </div>
+    {% else %}
+        {{ form_start(form) }}
+        {{ form_row(form.content) }}
+        <div class="text-right">
+            <button type="submit" class="btn btn-primary">
+                Envoyer
+            </button>
+        </div>
+        {{ form_end(form) }}
+    {% endif %}
+
+    {# liste commentaire #}
+    {% for comment in article.comments %}
+        <h5>
+            {{ comment.user }}
+            <small>{{ comment.publicationDate|date('d/m/Y H:i') }}</small>
+        </h5>
+        <div class="card bg-light mb-3">
+            <div class="card-body">
+                {{ comment.content|nl2br }}
+            </div>
+        </div>
+    {% else %}
+        <p>Aucun commentaire pour cette article.</p>
+    {% endfor %}
 {% endblock %}
